# NBA_success_of_drafting

./: .dockerignore  .gitignore  Dockerfile  FinalProject.py  README.md  players.csv  pyproject.toml  requirements.txt
src/nba_draft_success/: cli.py  config.py  data.py  features.py  models.py  scrape.py
